# experiments

./: .gitignore  README.md
GUIs/azul_app/: Makefile
GUIs/beeware_toga_test_app/: LICENSE  README.rst  notes.md  pyproject.toml
GUIs/cefpython/: gui.py  pyproject.toml
GUIs/dear_py_gui/: Makefile  gui.py  pyproject.toml
GUIs/kivy_app/: Makefile  gui.py  notes.md  pyproject.toml
GUIs/kivy_app/builds/linux/: kivy_app.spec
GUIs/kivy_app/builds/windows/: kivy_app.spec
GUIs/kivy_app/kivy_app/: __main__.py
GUIs/nano_gui/: Makefile  gui.py  gui_example_1.py  notes.md  pyproject.toml
GUIs/textual/: Makefile  pyproject.toml
GUIs/thrust/: Pipfile  sample.py
GUIs/wxpython_app/: gui.py
ai/llama2/: Makefile  README.md  main.py  pyproject.toml
aiohttp_redis_producer_consumer/: .pylintrc  README.rst  requirements-test.txt  requirements.txt
aiohttp_slow_responses/: call_app.sh
async_http_sample/: README.rst  requirements-test.txt  requirements.txt
asyncio_context_vars/: Makefile  test.py
asyncio_functional_test_coverage/: .coveragerc  LICENSE  README.rst  requirements-test.txt  requirements.txt
asyncio_tcp/: Makefile
asyncssh_sample/: ssh_host_key  ssh_host_key.pub
celery_hello_world/: requirements.txt  run_rabbitmq.sh  schedule_task.py  tasks.py
curtsies_cli_ui/: requirements.txt
data_engineering/sql_triggers/: Makefile  TODOs.md  docker-compose.yml  pyproject.toml
data_engineering/sql_triggers/tests/: conftest.py  test_repository.py  test_triggers.py
data_engineering/sql_triggers/triggers/: config.py  db.py  migrations.py  normal_sql_function.sql  repository.py  schema_setup.py  schema_setup.sql  test_triggers.py  trigger_function.sql
data_science/pandas_seaborn/: Makefile  README.md  main.py  pyproject.toml
django_sample/: .coveragerc  .gitignore  Makefile  db.sqlite3  pyproject.toml  pytest.ini
django_sample/django_sample/: settings.py  urls.py
django_sample/polls/: models.py  urls.py  views.py
django_sample/polls/migrations/: 0002_auto_20190209_1929.py  0004_auto_20190315_2057.py
django_sample/polls/templates/polls/: detail.html  index.html
django_sample/polls/tests/: test_question_detail_view.py  test_question_model.py  test_question_view.py  test_questions_index_view.py  utils.py
django_sample/tests/: test_django_sample.py
docker_with_host_user/: Makefile
fifo_linux/: notes.md  receiver.py  run.sh  writer.py
fullscreen_async/: displayer.py  requirements.txt
functional_tests/: Makefile  Pipfile
google_keep_shell/: gkeep_shell.py  pyproject.toml
huey_postgres_task_queue/: requirements.txt
hug/app/: README.rst  (+1 more)
jupyter_notebook/: choroba_srodmiazszowa.csv  choroba_srodmiazszowa.ipynb  requirements.txt
kivy/: README.md  buildozer.spec  main.py
lol_score_getter/: get_lol_score.py  requirements.txt
misc/: alb_logs.py  asyncio_self_killing_task.py  compare_phone_music  embedding_python_in_bash.sh  file_tree_lowercaser.py  hello.rs  keyboard_capture.py  keyboard_reading_sample.py  licz_hajs_za_mieszkanie_na_3  molotov_load_test.py  nats_connect.py  network_restarter  opensubtitles_access.py  random_permutations.py  run_tpm_emu.sh  setup_crosstool.sh  setup_tpm_emu.sh  task_time_calc.py  test_stopowania.py  test_task_time_calc.py
opencv_stuff/: show_camera_image.py  take_photo.py
pdm_sample/: Makefile  pyproject.toml
perf_improvements/: perf_test.py  perf_test_numba.py  set_llvm_config_path_for_numba
pip_test_app/: requirements.txt
pipenv_project/: Pipfile  TODO  test_bla.py
practice/pdm_sample/: .gitignore  Makefile  pyproject.toml
pycon_pl_2016_ctf/: powitanie
pytest_capture_log_error/: requirements.txt  test_file.py
react-demo/: package-lock.json
rust_scratchpad/: Cargo.toml
stack_overflow__bug_reproduction/asyncio_tasks_stopping_on_wait/: pyproject.toml
state_machine_graphs/: .gitignore  draw_graph.py  graph.dot  graph_easy_graph.txt
structlog_demo/: log_stuff.py  log_stuff_to_stackdriver.py  log_stuff_unstructured.py  requirements.txt  some_lib.py
subprocess_coverage/: .coveragerc  requirements.txt  run_coverage.sh
swaggery/: moj_spec.json  moj_spec.yaml
testing__quality_assurance/sample_backend_app/: Dockerfile  MOVED_TO_DIFFERENT_REPO.md  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
testing__quality_assurance/sample_backend_app/alembic_migrations/: env.py  script.py.mako
testing__quality_assurance/sample_backend_app/alembic_migrations/versions/: 176484337cb3_initial_migration.py  c57dc0f1d7d7_initial_migration.py
testing__quality_assurance/sample_backend_app/app/: main.py
testing__quality_assurance/sample_backend_app/sample_backend/: api_schemas.py  config.py  db.py  db_models.py  main.py  notes.py  services.py
testing__quality_assurance/sample_backend_app/tests/: config.py  test_server_functional.py
testing__quality_assurance/sample_backend_app/tests/integrated/: test_notes.py
testing__quality_assurance/sample_backend_app/tests/unit/: test_app_endpoints.py  test_server_unit.py
text_file_block_sorting/: addresses_unsorted.txt  text_file_sorter.py
tricks/: asyncio_shield.py  dbus_listen_for_wifi_connects.py  nats_publish.py  pyplot.py
txodds_code_test/: .coveragerc  .pylintrc-tests  README.rst  requirements-test.txt  requirements.txt
web/aiohttp_slow_responses/: Makefile  pyproject.toml
web/aiohttp_slow_responses/app/: app.py
web/django_sample/: .coveragerc  .pdbrc  Makefile  db.sqlite3  pyproject.toml
web/django_sample/django_sample/: settings.py
web/django_sample/polls/: admin.py  apps.py  models.py  views.py
web/django_sample/polls/migrations/: 0001_initial.py  0003_auto_20190213_2303.py  0004_auto_20190315_2057.py  0005_auto_20220911_1537.py
web/django_sample/polls/templates/polls/: index.html  results.html
web/django_sample/polls/tests/: test_question_detail_view.py  test_questions_index_view.py
web/django_sample/templates/admin/: base_site.html
webpack-demo/: Makefile  index.html  package-lock.json  package.json  webpack.config.js
wunderlist_to_trello/: Pipfile
(+182 files in other folders)
