[tool.poetry]
name = "django_sample"
version = "0.1.0"
description = ""
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ptpython = "^2.0"
flake8 = "^3.6"
django-extensions = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
