[tool.poetry]
name = "google_keep_api_use"
version = "0.1.0"
description = ""
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gkeepapi = "^0.12.2"
ptpython = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
