[tool.poetry]
name = "cefpython"
version = "0.1.0"
description = "cefpython GUI test"
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
cefpython3 = "66.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
