[tool.poetry]
name = "nano_gui"
version = "0.1.0"
description = "Test GUI app using nanogui"
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nanogui = "^0.1.2"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
