[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michal Bultrowicz", email = "michal.bultrowicz@gmail.com"},
]
dependencies = [
    "fastapi~=0.65",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "ptpython~=3.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
