[tool.poetry]
name = "aiohttp_slow_responses"
version = "0.1.0"
description = "AioHttp HTTP service serving long responses"
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
aiohttp-devtools = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
