[tool.poetry]
name = "django_sample"
version = "0.1.0"
description = ""
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^4.5"
pytest = "^7.1.3"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ptpython = "^2.0"
flake8 = "^3.6"
pytest-django = "^3.4"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
